--- a/patrolhound/src/main/webapp/index.xhtml
+++ b/patrolhound/src/main/webapp/index.xhtml
@@ -1,69 +1,43 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml"
-                xmlns:ui="http://java.sun.com/jsf/facelets"
-                xmlns:f="http://xmlns.jcp.org/jsf/core"
-                xmlns:h="http://xmlns.jcp.org/jsf/html"
-                template="/templates/master.xhtml">
+					 xmlns:ui="http://java.sun.com/jsf/facelets"
+					 xmlns:f="http://xmlns.jcp.org/jsf/core"
+					 xmlns:h="http://xmlns.jcp.org/jsf/html"
+					 xmlns:pt="http://xmlns.jcp.org/jsf/passthrough"
+					 template="/templates/master.xhtml">
 
-    <ui:param name="parentId" value="home"/>
+	<ui:param name="parentId" value="home"/>
 
 
-    <ui:define name="content">
+	<ui:define name="content">
 
-        <div>
-            <ul id="jobTab" class="nav nav-tabs">
-                <li role="presentation" class="active">
-                    <a href="#new" aria-controls="home" role="tab"
-                       data-toggle="tab">New job offers</a>
-                </li>
-                <li role="presentation">
-                    <a href="#all" aria-controls="all" role="tab"
-                       data-toggle="tab">All job offers</a>
-                </li>
-            </ul>
-            <div id="tabContent" class="tab-content">
-                <div role="tabpanel" class="tab-pane fade in active" id="new" aria-labelledby="home-tab">
-                    <h:dataTable id="customers" styleClass="table table-hover" value="#{homeAction.newJobOffers}"
-                                 var="currentCustomer">
-                        <h:column>
-                            <f:facet name="header">Company</f:facet>
-                            #{currentCustomer.companyName}
-                        </h:column>
-                        <h:column>
-                            <f:facet name="header">Job Description</f:facet>
-                            #{currentCustomer.jobTitle}
-                        </h:column>
-                        <h:column>
-                            <f:facet name="header">Announced</f:facet>
-                            <h:outputText value="#{currentCustomer.jobAnnouncementTime}"/>
-                        </h:column>
-                    </h:dataTable>
-                </div>
-                <div role="tabpanel" class="tab-pane fade" id="all" aria-labelledby="profile-tab">
-                    <h:dataTable id="customers-all" styleClass="table table-hover" value="#{homeAction.allJobOffers}"
-                                 var="currentCustomer">
-                        <h:column>
-                            <f:facet name="header">#{messages['company.name']}</f:facet>
-                            #{currentCustomer.companyName}
-                        </h:column>
-                        <h:column>
-                            <f:facet name="header">#{messages['company.jobDescription']}</f:facet>
-                            #{currentCustomer.jobTitle}
-                        </h:column>
-                        <h:column>
-                            <f:facet name="header">#{messages['company.announced']}</f:facet>
-                            <h:outputText value="#{currentCustomer.jobAnnouncementTime}"/>
-                        </h:column>
-                    </h:dataTable>
-                </div>
-            </div>
-        </div>
+		<h:dataTable id="companies" styleClass="table table-hover rowlink" value="#{companyAction.loadCompanies()}"
+						 var="currentCompany" pt:data-link="row">
+			<h:column>
+				<f:facet name="header">#{messages['company.name']}</f:facet>
+				<h:link value="#{currentCompany.name}" outcome="pretty:companyOverview">
+					<f:param name="id" value="#{currentCompany.id}"/>
+				</h:link>
+			</h:column>
+			<h:column>
+				<f:facet name="header">#{messages['company.city']}</f:facet>
+				#{currentCompany.city}
+			</h:column>
+			<h:column>
+				<f:facet name="header">#{messages['company.phone']}</f:facet>
+				<h:outputText value="#{currentCompany.phone}"/>
+			</h:column>
+			<h:column>
+				<f:facet name="header">#{messages['company.offers']}</f:facet>
+				<h:outputText value="#{companyAction.countOffers(currentCompany.id)}"/>
+			</h:column>
+		</h:dataTable>
 
-        <h:form>
-            <h:commandButton styleClass="btn btn-default" value="Crawl Jobs"
-                             action="#{homeAction.crawlJobs}"/>
-        </h:form>
+		<h:form>
+			<h:commandButton styleClass="btn btn-default" value="Crawl Jobs"
+								  action="#{homeAction.crawlJobs}"/>
+		</h:form>
 
-        <script src="#{request.contextPath}/static/bootstrap-tab.js"/>
+		<script src="#{request.contextPath}/static/bootstrap-tab.js"/>
 
-    </ui:define>
+	</ui:define>
 </ui:composition>
