--- a/patrolhound/src/main/webapp/index.xhtml
+++ b/patrolhound/src/main/webapp/index.xhtml
@@ -30,6 +30,10 @@
 				<f:facet name="header">#{messages['company.offers']}</f:facet>
 				<h:outputText value="#{companyAction.countOffers(currentCompany.id)}"/>
 			</h:column>
+			<h:column>
+				<f:facet name="header">#{messages['company.updated']}</f:facet>
+				<h:outputText value="#{currentCompany.lastUpdate}" escape="false"/>
+			</h:column>
 		</h:dataTable>
 
 		<script src="#{request.contextPath}/static/bootstrap-tab.js"/>
